// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HubCloud handle crayon shin-chan 1993 1`] = `
[
  {
    "format": "unknown",
    "label": "HubCloud (FSL)",
    "meta": {
      "bytes": 28550795100,
      "countryCodes": [],
      "title": "Crayon Shinchan Action Kamen vs Demon (1993) 1080p BluRay REMUX AVC [Hindi DD 2.0 + Japanese FLAC 2.0] (PitiPati-Ionicboy) (4kHDHub.com).mkv",
    },
    "sourceId": "hubcloud_fsl",
    "ttl": 259200000,
    "url": "https://pub-52f57cc1b81f4ecdac02802c1566c33d.r2.dev/Crayon%20Shinchan%20Action%20Kamen%20vs%20Demon%201993%201080p%20BluRay%20REMUX%20AVC%20[Hindi%20DD%202.0%20+%20Japanese%20FLAC%202.0]%20PitiPati-Ionicboy%204kHDHub.com.mkv?token=1758025506",
  },
]
`;

exports[`HubCloud handle dark 2017 s03e08 1`] = `
[
  {
    "format": "unknown",
    "label": "HubCloud (FSL)",
    "meta": {
      "bytes": 3382286745,
      "countryCodes": [],
      "title": "Dark.S03E08.The.Paradise.1080p.NF.WEB-DL.English.DDP5.1-German.DDP5.1.H.264-4kHdHub.Com.mkv",
    },
    "sourceId": "hubcloud_fsl",
    "ttl": 259200000,
    "url": "https://pub-c0c400d353df4c68ae3a2d5e089ecf60.r2.dev/Dark.S03E08.The.Paradise.1080p.NF.WEB-DL.English.DDP5.1-German.DDP5.1.H.264-4kHdHub.Com.mkv",
  },
  {
    "format": "unknown",
    "label": "HubCloud (PixelServer)",
    "meta": {
      "bytes": 3382286745,
      "countryCodes": [],
      "title": "Dark.S03E08.The.Paradise.1080p.NF.WEB-DL.English.DDP5.1-German.DDP5.1.H.264-4kHdHub.Com.mkv",
    },
    "sourceId": "hubcloud_pixelserver",
    "ttl": 259200000,
    "url": "https://pixeldrain.dev/api/file/2kFQBQio?download",
  },
]
`;

exports[`HubCloud handle dexter original sin 2024 s01e01 1`] = `
[
  {
    "format": "unknown",
    "label": "HubCloud (FSL)",
    "meta": {
      "bytes": 5733781340,
      "countryCodes": [],
      "title": "Dexter.Original.Sin.S01E01.2160p.SKST.WEB-DL.H.265.DDP5.1-Tyrell.mkv",
    },
    "sourceId": "hubcloud_fsl",
    "ttl": 259200000,
    "url": "https://pub-52f57cc1b81f4ecdac02802c1566c33d.r2.dev/Dexter.Original.Sin.S01E01.2160p.SKST.WEB-DL.H.265.DDP5.1-Tyrell.mkv?token=1758025505",
  },
  {
    "format": "unknown",
    "label": "HubCloud (PixelServer)",
    "meta": {
      "bytes": 5733781340,
      "countryCodes": [],
      "title": "Dexter.Original.Sin.S01E01.2160p.SKST.WEB-DL.H.265.DDP5.1-Tyrell.mkv",
    },
    "sourceId": "hubcloud_pixelserver",
    "ttl": 259200000,
    "url": "https://pixeldrain.net/api/file/HqAiguQV",
  },
]
`;
